plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.megastudy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3"
    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'

    implementation "com.github.ua-parser:uap-java:1.6.1"

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9"
    implementation "com.maxmind.geoip2:geoip2:4.3.1"

    implementation "org.springframework.boot:spring-boot-starter-security:3.5.4"

    implementation "io.jsonwebtoken:jjwt-api:0.12.7"
    implementation "io.jsonwebtoken:jjwt-impl:0.12.7"
    implementation "io.jsonwebtoken:jjwt-jackson:0.12.7"

    // myBatis 쿼리 디버깅을 위한 p6spy
    implementation 'p6spy:p6spy:3.9.1'
    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // LocalDateTime 직렬화/역직렬화를 위해 추가
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    //TODO AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop:3.5.3'

}

tasks.named('test') {
    useJUnitPlatform()
}
